--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "language-dyon",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Syntax highlighting for Dyon",
+  "license": "MIT",
   "engines": {
     "atom": ">0.50.0 <2.0.0"
   },
